--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,6 +50,7 @@ html, body {
 }
 
 .img-box {
+    position: relative;
     border: 2px dashed var(--border-color);
     border-radius: 8px;
     width: 100%;
@@ -62,6 +63,7 @@ html, body {
     transition: all 0.3s ease;
     margin-bottom: 1.5rem;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .img-text {
